--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "ez-reqwest"
+description = "Reqwest but easy"
 version = "1.0.0"
 edition = "2024"
 authors = ["Puppet <doggyandkira2013@gmail.com>"]
